# QCU-LDP

./: ARTIFACT-APPENDIX.md  LICENSE  README.md  pyproject.toml
experiments/bank_attrition/: draw_accuracy.py  draw_accuracy_pac.py  draw_lr_avg_wor_accuracy.py  draw_rf_accuracy.py  draw_rf_avg_wor_accuracy.py  emperical_rf.py  lr_accuracy.csv  lr_avg_wor.csv  lr_avg_wor.py  lr_avg_wor_dataset_dist.py  lr_empirical_theo.py  rf_accuracy.csv  rf_avg_wor.csv  rf_avg_wor.py  rf_avg_wor_dataset_dist.py  rf_empirical_theo.py  robust_vec_rf.py
experiments/mnist/: avg_wor_accuracy.py  cnn_accuracy.csv  cnn_accuracy_0.csv  cnn_accuracy_0_monte_carlo.csv  cnn_accuracy_1.csv  (+23 more)
others/: draw_laplace.py  example_qda.py  mnist_dimension_merging.py  rho_epsilon_laplace.py  selecting_best.py
reproduction/: figure_10.py  figure_11_data.py  figure_11_draw.py  figure_12_data.py  figure_12_draw.py  figure_13_data.py  figure_13_draw.py  figure_14_data.py  figure_14_draw.py  figure_15_data.py  figure_15_draw.py  figure_4.py  figure_6.py  figure_7.py  figure_8.py  figure_9.py  table_2.py
src/: cdf_ldp_mechanisms_at_x.py  cdf_ldp_mechanisms_for_rectangle.py  empirical_bound.py  ldp_mechanisms.py  merge_dim_of_2d_img.py  monte_carlo_torch.py  probabilistic_robust_radius.py  robust_radius_sklearn.py  robust_radius_torch.py  samples_from_mechanism.py  utilities.py
test/: test_emperical_bound.py  test_exp_emperical.py  test_krr_theo.py  test_robust_rect.py  test_robust_rect_sklearn.py  test_robust_rect_torch.py
tmp/: boundedness_examples.py  selecting_best.py  utility_bound_laplace.py
(+46 files in other folders)
