[project]
name = "boundclassifier-ldp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
